--- a/scss/page/_landing_page.scss
+++ b/scss/page/_landing_page.scss
@@ -2189,6 +2189,8 @@ main {
     width: 100%;
     height: 7px;
     background-size: 100% 100%;
+    position: relative;
+    z-index: 2500;
 }
 
 // background images
